--- a/App/www/index.html
+++ b/App/www/index.html
@@ -5,7 +5,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
     <link rel="stylesheet" href="css/luckytheme.css" />
     <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
@@ -44,7 +44,7 @@
 <div data-role="page" id="Gostivar">
     <div data-role="header" style="padding-top: 20px;">
         <p align="center">LuckyBuss</p>
-        <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
+        <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
     </div>
 
     <div data-role="content">
@@ -84,7 +84,7 @@
 <div data-role="page" id="Tetov">
     <div data-role="header" style="padding-top: 20px;">
         <p align="center">LuckyBuss</p>
-        <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
+        <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
     </div>
 
     <div data-role="content">
@@ -122,7 +122,7 @@
 <div data-role="page" id="OrariAll">
     <div data-role="header" style="padding-top: 20px;">
         <p align="center">LuckyBuss</p>
-        <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
+        <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
     </div>
 
     <div data-role="content">
@@ -148,7 +148,7 @@
 <div data-role="page" id="OrariIDO">
     <div data-role="header" style="padding-top: 20px;">
         <p align="center">Ido Tours</p>
-        <a href="#OrariAll" data-transition="slide" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
+        <a href="#OrariAll" data-transition="slide" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
     </div>
 
     <div data-role="content">
@@ -257,7 +257,7 @@
 <div data-role="page" id="Settings">
     <div data-role="header" style="padding-top: 20px;">
         <p align="center">Preferencat</p>
-        <a href="#home" data-transition="slide" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
+        <a href="#home" data-transition="slide" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
     </div>
 
     <div data-role="content">
@@ -276,15 +276,18 @@
             </fieldset>
         </form>
 
+		<form id = "tema">
         <div class="ui-field-contain" id="theme-selector">
             <fieldset data-role="controlgroup" data-type="horizontal">
                 <legend>Tema:</legend>
-                <label for="a">A</label>
-                <input type="radio" name="theme" id="a" checked>
-                <label for="b">B</label>
-                <input type="radio" name="theme" id="b">
+                <input type="radio" name="theme" id="a" value="a">
+				<label for="a">A</label>
+                <input type="radio" name="theme" id="b" value="b">
+				<label for="b">B</label>
             </fieldset>
     </div>
+	</form>
+	</div>
 
 
 
@@ -311,7 +314,7 @@
     app.initialize();
 
     var agjencioniZgjedhur;
-	
+	var tema;
     var date = new Date();
 
     var orari = {"oraret":{"Ido Tours":{"Gostivar":{"destinacioni":"Tetovë","orari":["06:20","07:10","08:10","09:40","11:10","12:45","13:20","14:30","15:45","17:10","19:00","20:25"]},"Tetovë":{"destinacioni":"Gostivar","orari":["05:45","06:20","07:25","08:50","10:25","11:55","12:30","13:45","15:10","16:20","17:55","19:40"]}},"Nasir Tours":{"Gostivar":{"destinacioni":"Tetovë","orari":["07:20","08:20","08:50","09:20","10:30","10:50","11:50","12:20","13:40","15:20","16:50","18:20"]},"Tetovë":{"destinacioni":"Gostivar","orari":["07:50","09:00","10:10","11:00","11:40","12:40","13:10","14:30","15:25","16:10","17:30","19:20"]}},"Euro Tours":{"Gostivar":{"destinacioni":"Tetovë","orari":["05:15","06:35","07:30","08:30","09:00","10:00","11:30","13:00","14:45","16:00","17:30","19:15"]},"Tetovë":{"destinacioni":"Gostivar","orari":["06:00","07:40","08:10","09:10","09:40","10:40","12:10","14:00","15:30","16:40","18:10","20:00"]}}}};
@@ -334,6 +337,24 @@
 	localStorage.setItem("agjencioniZgjedhur", agjencia);
 	agjencioniZgjedhur = agjencia;
 	document.getElementById('agjencioniZgjedhur').innerHTML = agjencioniZgjedhur;
+	});
+	
+	
+	if (localStorage.getItem("tema") == null) {
+	$('input:radio[name="theme"]').filter('[value="a"]').attr('checked', true);
+	localStorage.setItem("tema", "a");
+	tema = "a";
+	}
+	else
+	{
+	tema = localStorage.getItem("tema");
+	$('input:radio[name="theme"]').filter('[value="'+tema+'"]').attr('checked', true);
+	}	
+	
+	$('#tema input').on('change', function() {
+   var temas = $('input[name=theme]:checked', '#tema').val(); 
+	localStorage.setItem("tema", temas);
+	tema = temas;
 	});
 
     var hours = date.getHours();
