--- a/App/www/index.html
+++ b/App/www/index.html
@@ -33,7 +33,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
             </ul>
         </div>
@@ -44,7 +44,7 @@
 <div data-role="page" id="Gostivar">
     <div data-role="header" style="padding-top: 20px;">
         <p align="center">LuckyBuss</p>
-        <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
+        <a href="#home" data-transition="fade" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
     </div>
 
     <div data-role="content">
@@ -73,7 +73,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 
             </ul>
@@ -84,7 +84,7 @@
 <div data-role="page" id="Tetov">
     <div data-role="header" style="padding-top: 20px;">
         <p align="center">LuckyBuss</p>
-        <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
+        <a href="#home" data-transition="fade" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
     </div>
 
     <div data-role="content">
@@ -111,7 +111,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 
             </ul>
@@ -122,7 +122,7 @@
 <div data-role="page" id="OrariAll">
     <div data-role="header" style="padding-top: 20px;">
         <p align="center">LuckyBuss</p>
-        <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
+        <a href="#home" data-transition="fade" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px;"></a>
     </div>
 
     <div data-role="content">
@@ -137,7 +137,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
             </ul>
         </div>
@@ -173,7 +173,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 
             </ul>
@@ -210,7 +210,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 
             </ul>
@@ -246,7 +246,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear" data-transition="slide">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 
             </ul>
@@ -296,7 +296,7 @@
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li><a href="#Settings" data-icon="gear">Preferencat</a></li>
-                <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                <li><a href="#home" data-icon="grid" data-transition="fade">Ballina</a></li>
                 <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 
             </ul>
