--- a/App/www/index.html
+++ b/App/www/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css" />
 
     <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="js/jquery.mobile-1.4.5.min.js"></script>
-	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>  
+    <script src="js/jquery.mobile-1.4.5.js"></script>
+<!--	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>  -->
     
 	<title>LuckyBuss App</title>
 </head>
@@ -25,8 +25,8 @@
     <div data-role="content" id="cnt1">
 
         <h3 style="text-align:center;">Zgjidhni destinacionin tuaj?</h3>
-        <a href="#Gostivar" data-transition="slide" class="ui-btn">Gostivar</a>
-        <a href="#Tetov" data-transition="slide" class="ui-btn">Tetovë</a>
+		<a href="#Tetov" data-transition="slide" class="ui-btn">Gostivar</a>
+        <a href="#Gostivar" data-transition="slide" class="ui-btn">Tetovë</a>
         <br />
         <h5 style="text-align:center;">Agjencioni i zgjedhur:</h5>
         <h3 style="text-align:center;"><div id="agjencioniZgjedhur"></div></h3>
